--- a/Index.html
+++ b/Index.html
@@ -51,17 +51,31 @@
   </head>
 
   <body class="landing-page sidebar-collapse">
+    <!-- Load Facebook SDK for JavaScript -->
+    <div id="fb-root"></div>
     <script>
       window.fbAsyncInit = function() {
         FB.init({
-          appId            : '2516248668614655',
-          autoLogAppEvents : true,
           xfbml            : true,
           version          : 'v5.0'
         });
       };
-    </script>
-    <script async defer src="https://connect.facebook.net/en_US/sdk.js"></script>
+
+      (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = 'https://connect.facebook.net/es_ES/sdk/xfbml.customerchat.js';
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+
+    <!-- Your customer chat code -->
+    <div class="fb-customerchat"
+      attribution=setup_tool
+      page_id="1839322866381598"
+logged_in_greeting="Hola! ¿Como podemos ayudarte?"
+logged_out_greeting="Hola! ¿Como podemos ayudarte?">
+    </div>
     <nav
       class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg"
       color-on-scroll="100"
