--- a/Index.html
+++ b/Index.html
@@ -455,37 +455,39 @@ logged_out_greeting="Hola! ¿Como podemos ayudarte?">
               <h4 class="text-center description">
                 Dejanos tu mensaje y nos pondremos en contacto a la brevedad
               </h4>
-              <form class="contact-form mx-5">
+              <form class="contact-form mx-5" id="contact-form" method="post" action="contact.php" role="form">
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label class="bmd-label-floating">Nombre</label>
-                      <input type="email" class="form-control" />
+                      <label for="name" class="bmd-label-floating">Nombre</label>
+                      <input id="name" type="text" name="name" class="form-control" />
+                      <div class="help-block with-errors"></div>
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label class="bmd-label-floating">Email</label>
-                      <input type="email" class="form-control" />
+                      <label for="email" class="bmd-label-floating">Email</label>
+                      <input id="email" type="email" name="email" class="form-control" />
+                      <div class="help-block with-errors"></div>
                     </div>
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="exampleMessage" class="bmd-label-floating"
+                  <label for="message" class="bmd-label-floating"
                     >Tu mensaje</label
                   >
                   <textarea
                     type="email"
                     class="form-control"
+                    name="message"
                     rows="4"
-                    id="exampleMessage"
+                    id="message"
                   ></textarea>
+                  <div class="help-block with-errors"></div>
                 </div>
                 <div class="row">
                   <div class="col-md-4 ml-auto mr-auto text-center">
-                    <button class="btn btn-primary btn-raised">
-                      Enviar Mensaje
-                    </button>
+                    <input type="submit" class="btn btn-primary btn-raised" value="Enviar mensaje">
                   </div>
                 </div>
               </form>
@@ -524,7 +526,6 @@ logged_out_greeting="Hola! ¿Como podemos ayudarte?">
         </div>
       </div>
     </footer>
-    <div class="fb-customerchat" page_id="<PAGE_ID>"></div>
     <!--   Core JS Files   -->
     <script
       src="../assets/js/core/jquery.min.js"
@@ -539,18 +540,9 @@ logged_out_greeting="Hola! ¿Como podemos ayudarte?">
       type="text/javascript"
     ></script>
     <script src="../assets/js/plugins/moment.min.js"></script>
-    <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
-    <script
-      src="../assets/js/plugins/bootstrap-datetimepicker.js"
-      type="text/javascript"
-    ></script>
-    <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-    <script
-      src="../assets/js/plugins/nouislider.min.js"
-      type="text/javascript"
-    ></script>
-    <!--  Google Maps Plugin    -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+   
+   
+   
     <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
     <script
       src="../assets/js/material-kit.js?v=2.0.6"
@@ -560,6 +552,8 @@ logged_out_greeting="Hola! ¿Como podemos ayudarte?">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15/dist/smooth-scroll.polyfills.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js" integrity="sha256-dHf/YjH1A4tewEsKUSmNnV05DDbfGN3g7NMq86xgGh8=" crossorigin="anonymous"></script>
+        <script src="assets/js/contact.js"></script>
     <script>
       $(document).on("click", '[data-toggle="lightbox"]', function(event) {
         event.preventDefault()
